--- a/templates/index.html
+++ b/templates/index.html
@@ -1,20 +1,94 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Chatbot</title>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+    <title>Kevin</title>
+
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;800&display=swap"
+      rel="stylesheet"
+    />
+
+    <style>
+      body {
+        font-family: "Inter", sans-serif;
+      }
+
+      .container {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        height: 100dvh;
+      }
+
+      .emoji {
+        margin: 0;
+        padding: 0;
+        font-size: 5rem;
+      }
+
+      .loading-overlay {
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background: rgba(255, 255, 255, 0.7);
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        visibility: hidden;
+      }
+
+      .loading-spinner {
+        border: 4px solid rgba(0, 0, 0, 0.1);
+        width: 36px;
+        height: 36px;
+        border-radius: 50%;
+        border-left-color: #09f;
+        animation: spin 1s linear infinite;
+      }
+
+      input[type="text"] {
+        border: 2px solid #09f;
+        border-radius: 4px;
+        padding: 10px 15px;
+        font-size: 16px;
+        margin-bottom: 20px;
+        box-sizing: border-box;
+      }
+
+      @keyframes spin {
+        0% {
+          transform: rotate(0deg);
+        }
+        100% {
+          transform: rotate(360deg);
+        }
+      }
+    </style>
   </head>
   <body>
-    <h1>AI girlfriend</h1>
-    <form method="POST" action="/send_message">
-      <input type="text" name="human_input" placeholder="Enter your message" />
-      <button type="submit">Send</button>
-    </form>
-    <div id="response_message"></div>
+    <div class="container">
+      <p class="emoji">👋</p>
+      <h1>Say hi!</h1>
+      <form method="POST" action="/send_message">
+        <input type="text" name="human_input" autofocus placeholder="Hi?" />
+      </form>
+    </div>
+    <div class="loading-overlay" id="loadingOverlay">
+      <div class="loading-spinner"></div>
+    </div>
     <script>
       const form = document.querySelector("form");
+      const loadingOverlay = document.getElementById("loadingOverlay");
 
       form.addEventListener("submit", function (e) {
         e.preventDefault();
+        loadingOverlay.style.visibility = "visible"; // Show loading overlay
         const formData = new FormData(form);
         fetch("/stream_audio_message", {
           method: "POST",
@@ -25,43 +99,15 @@
             const url = URL.createObjectURL(blob);
             const audio = new Audio(url);
             audio.play();
+            loadingOverlay.style.visibility = "hidden"; // Hide loading overlay after fetching
+          })
+          .catch(() => {
+            loadingOverlay.style.visibility = "hidden"; // Ensure loading overlay is hidden on error
+            alert("An error occurred while processing your request.");
           });
         form.reset();
       });
-
-      // const form = document.querySelector("form");
-      // const audio = document.createElement('audio');
-      // const mediaSource = new MediaSource();
-
-      // audio.src = URL.createObjectURL(mediaSource);
-      // audio.play(); // Attempt to play the audio
-
-      // mediaSource.addEventListener('sourceopen', function () {
-      //   const sourceBuffer = mediaSource.addSourceBuffer('audio/mpeg'); // Use the correct MIME type
-      //   form.addEventListener("submit", function (e) {
-      //     e.preventDefault();
-      //     const formData = new FormData(form);
-      //     fetch("/stream_audio_message", {
-      //       method: "POST",
-      //       body: formData,
-      //     })
-      //     .then(response => {
-      //       const reader = response.body.getReader();
-      //       function push() {
-      //         reader.read().then(({ done, value }) => {
-      //           if (done) {
-      //             mediaSource.endOfStream();
-      //             return;
-      //           }
-      //           sourceBuffer.appendBuffer(value);
-      //           sourceBuffer.addEventListener('updateend', push, { once: true });
-      //         });
-      //       }
-      //       push();
-      //     });
-      //     form.reset();
-      //   });
-      // });
     </script>
+    <div id="response_message"></div>
   </body>
 </html>
